--- a/404.html
+++ b/404.html
@@ -1,11 +1,11 @@
 ---
 layout: page
-title: "404: Page not found"
+title: "Wuh-oh!"
 permalink: 404.html
 ---
 
 
 
-Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. 
+Sorry, that page doesn't seem to exist
 
 
